# ZZZ-Tubes-IF2224

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: dfa.json
examples/: comment_test.pas  comprehensive_test.pas
src/: main.rs
src/lexer/: dfa.rs  lexer.rs  mod.rs  token_types.rs
src/parser/: .gitkeep
src/semantic_analyzer/: .gitkeep
test/integration/: .gitkeep
test/milestone-1/: expected_output_hello.txt  test1_simple.pas  test2_operators.pas  test3_strings_chars.pas  test4_comments.pas  test5_arrays_range.pas
test/milestone-2/: .gitkeep
test/milestone-4/: .gitkeep
