[package]
name = "pascal-s-compiler"
version = "1.0.0"
edition = "2021"
authors = ["Kelompok [KODE]"]
description = "Pascal-S Compiler for IF2224 TBFO"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

[[bin]]
name = "compiler"
path = "src/main.rs"